recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:10: error: identifier expected but integer literal found.
  aux(l,l[1])
          ^Min:11: error: ']' expected but '}' found.
} 
^